blocks/site/_badges.scss
ul.badges {
  list-style-type: none;
  padding: 0;

  li {
    display: inline-block;
    float: left;
    margin: 0 10px 20px 0;
  }
}

.badge {
  width: 400px;

  .icon {
    width: 120px;
    line-height: 120px;
    float: left;
    margin-right: 10px;
    overflow: hidden;
    text-align: center;
    position: relative;

    .checkmark {
      position: absolute;
      top: 20px;
      right: 0;
    }
  }

  h3 {
    margin-top: 20px;
  }

  p {
    height: 5rem;
    overflow: hidden;
  }
}

.group-badge-icon {
  margin-right: 10px;
}

